# adaptation_simulation

./: .gitattributes  .gitignore  PROJECT_CLEANUP_COMPLETE.md  RAILWAY_DEPLOYMENT.md  README.md  adaptive_pathways_filled.xlsx  dapp_app.py  dapp_sample.py  dmdu_explorer.py  dmdu_viewer.py  dt_rules_baseline.txt  gis.py  main.py  map.html  mockup.drawio  montecarlo_sim_dmdu.py  montecarlo_sim_for_dmdu.py  multiple_simulation.py  one_simulation.py  package-lock.json  prim.py  pyproject.toml  realsence.py  requirements.txt  river_resilience.py  sim_data.csv  simulation.py  simulation_2_modes.py  simulation_montecarlo.py  simulation_reinforcement.py  streamlit_main.py  test_ws_send.py  utils.py  ws_server.py  ws_server_for_react.py
adaptation_simulation/: .gitignore  DEPLOYMENT_READY.md  Y_AXIS_FIX.md
backend/: .env.example  config.py  main.py  models.py  requirements.txt
camera/: __init__.py  aruco_detector.py  config.py  coordinate.py  main.py  object_detector.py  overlay.py  realsense_bridge.py  realsense_init.py
data/: decision_log.csv
frontend/: .env.example  .env.production  README.md  package-lock.json  package.json  realsense.py
frontend-new/: index.html  package-lock.json  package.json
old/: simulation.py  simulation_2.py
output/: dmdu_clustered_summary.csv
outputs/: flood_damage_distribution.csv  flood_damage_distribution_summary.csv  full_mana_scenario_results.csv  paddy_dam_coef_comparison.csv  seed_search_results.csv  threshold_sensitivity_summary.csv  top_seed_event_summary.csv
post/: all_exploration.py  dmdu_detect.py  dmdu_explorer.py  (+3 more)
(+167 files in other folders)
