[tool.poetry]
name = "adaptation-simulation"
version = "0.1.0"
description = ""
authors = ["tnakash <antarctica219@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.1"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
plotly = "^5.24.1"
streamlit = "^1.38.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
